--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,10 @@
+
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+.background{
+    background-image: url('./assets/banner.png');
+    background-repeat: no-repeat;
+    background-size: contain;
+}
